apps/media/audiobookshelf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/instance: audiobookshelf-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: public
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.33.1@sha256:a4a5841bba093d81e5f4ad1eaedb4da3fda6dbb2528c552349da50ad1f7ae708
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: config
            - name: config
              mountPath: /metadata
              subPath: metadata
            - name: media
              mountPath: /mnt/media
              subPath: books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config
        - name: media
          persistentVolumeClaim:
            claimName: media-nfs
