apps/media/calibre-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  labels:
    app.kubernetes.io/name: calibre-web
    app.kubernetes.io/instance: calibre-web-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: public
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-web
    spec:
      tolerations:
        - key: "node.kubernetes.io/disk-pressure"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: calibre-web-automated
          image: crocodilestick/calibre-web-automated:v4.0.6@sha256:c31a738b6d5ec6982c050063dd3f063b6943eb1051fc81144789f840d9093a8d
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8083
          volumeMounts:
            - name: templates
              mountPath: /app/calibre-web-automated/cps/templates
            - name: config
              mountPath: /config
            - name: media
              mountPath: /cwa-book-ingest
              subPath: books/ingest
            - name: media
              mountPath: /calibre-library
              subPath: books/ebooks
            - name: media
              mountPath: /mnt/media/books/ebooks
              subPath: books/ebooks
      volumes:
        - name: templates
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: calibre-web-config
        - name: media
          persistentVolumeClaim:
            claimName: media-nfs
