apps/media/isponsorblocktv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isponsorblocktv
  labels:
    app.kubernetes.io/name: isponsorblocktv
    app.kubernetes.io/instance: isponsorblocktv-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: isponsorblocktv
  template:
    metadata:
      labels:
        app.kubernetes.io/name: isponsorblocktv
    spec:
      containers:
        - name: isponsorblocktv
          image: ghcr.io/dmunozv04/isponsorblocktv:v2.6.1@sha256:545856523283753ebcf4b400a46895b9906844be5265a0f4cab98a6b0bdf84be
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /app/data/config.json
              subPath: config.json
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: isponsorblocktv-config
