apps/media/lidarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  labels:
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/instance: lidarr-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:2.7.3.4691-ls306
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /mnt/media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: media
          persistentVolumeClaim:
            claimName: media-nfs
