apps/media/immich-machine-learning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  labels:
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/instance: immich-machine-learning-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-machine-learning
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-machine-learning
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v2.6.3@sha256:33b17015c3d14f2565e9b8cd36b48a70027b14b5cd20da7fbfff21a370b0309c
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  labels:
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/instance: immich-machine-learning-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  selector:
    app.kubernetes.io/name: immich-machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: http
