apps/media/immich-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  labels:
    app.kubernetes.io/name: immich-postgres
    app.kubernetes.io/instance: immich-postgres-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-postgres
    spec:
      containers:
        - name: postgres
          image: pgvector/pgvector:0.8.2-pg16-trixie@sha256:fc843a8547e0e4e84337a585aef2a28621db9e9f2fd1aaf8e72fedb04d19b40d
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  labels:
    app.kubernetes.io/name: immich-postgres
    app.kubernetes.io/instance: immich-postgres-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  selector:
    app.kubernetes.io/name: immich-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
