apps/media/immich-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  labels:
    app.kubernetes.io/name: immich-redis
    app.kubernetes.io/instance: immich-redis-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-redis
    spec:
      containers:
        - name: redis
          image: redis:8.0.6-alpine3.21@sha256:7aaf1bdc3a7879acc00f86d7be3d33536a5879a03cf592570ef2523e7334f4b8
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  labels:
    app.kubernetes.io/name: immich-redis
    app.kubernetes.io/instance: immich-redis-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  selector:
    app.kubernetes.io/name: immich-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
