apps/media/lidarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  labels:
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/instance: lidarr-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lidarr
  ports:
    - name: http
      port: 8686
      targetPort: http
