apps/media/searxng-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  labels:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/instance: searxng-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: media-vpn
  ports:
    - name: http
      port: 8080
      targetPort: 8080
