apps/media/transmission-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: media-vpn
  ports:
    - name: http
      port: 9091
      targetPort: 9091
