apps/media/immich-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/name: immich-server
    app.kubernetes.io/instance: immich-server-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v2.6.3@sha256:0cc1f82953d9598eb9e9dd11cbde1f50fe54f9c46c4506b089e8ad7bfc9d1f0c
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 2283
          volumeMounts:
            - name: immich-data
              mountPath: /data
            - name: media
              mountPath: /mnt/media/photos
              subPath: photos
              readOnly: true
      volumes:
        - name: immich-data
          persistentVolumeClaim:
            claimName: immich-data
        - name: media
          persistentVolumeClaim:
            claimName: media-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/name: immich-server
    app.kubernetes.io/instance: immich-server-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  selector:
    app.kubernetes.io/name: immich-server
  ports:
    - name: http
      port: 2283
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: immich-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  ingressClassName: traefik
  rules:
    - host: photos.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  name: http
    - host: immich.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  name: http
