apps/media/lidarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
  labels:
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/instance: lidarr-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  ingressClassName: traefik
  rules:
    - host: lidarr.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  name: http
